[package]
name = "os"
version = "0.1.0"
edition = "2021"
authors  = ["di yang dizai002@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
# riscv = { git = "https://github.com/rust-embedded/riscv.git" }
buddy_system_allocator = "0.6"
bitflags = "1.2.1"
xmas-elf = "0.7.0"

[features]
board_qemu = []
